fix(button): align font with ux guidelines
COMUI-125

--- a/src/components/global/gux-button/gux-button.less
+++ b/src/components/global/gux-button/gux-button.less
@@ -37,6 +37,8 @@ gux-button {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+    font-size: 12px;
+    font-weight: bold;
     &:focus {
       outline: none;
     }
